[gd_scene load_steps=11 format=3 uid="uid://boh7ivmk8tmmd"]

[ext_resource type="Script" path="res://Scripts/Enemies/Training_Dummy/training_dummy_d.gd" id="1_16ew2"]
[ext_resource type="Script" path="res://Scripts/Enemies/Training_Dummy/DeckD.gd" id="2_vblj5"]
[ext_resource type="Script" path="res://Scripts/Enemies/Training_Dummy/Skills.gd" id="3_85yhs"]
[ext_resource type="Texture2D" uid="uid://bbkl8fymc6l88" path="res://Resources/Art/TownEvents/training_dummy.png" id="4_ir2mi"]
[ext_resource type="Texture2D" uid="uid://dt0ya4xvwf842" path="res://Resources/UI/health_bar_under.png" id="5_3626h"]
[ext_resource type="Texture2D" uid="uid://bg17x4moack4" path="res://Resources/UI/health_bar_border.png" id="6_red56"]
[ext_resource type="Texture2D" uid="uid://cxmblkhdw7e8x" path="res://Resources/UI/health_bar.png" id="7_rikwp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rvqdy"]
size = Vector2(142.5, 174)

[sub_resource type="Gradient" id="Gradient_nopnb"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_osmp2"]
gradient = SubResource("Gradient_nopnb")
width = 1300
height = 24

[node name="TrainingDummyD" type="Node2D" groups=["enemy"]]
script = ExtResource("1_16ew2")

[node name="Deck" type="Node2D" parent="."]
script = ExtResource("2_vblj5")

[node name="Skills" type="Node2D" parent="."]
script = ExtResource("3_85yhs")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("4_ir2mi")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.25, -1)
shape = SubResource("RectangleShape2D_rvqdy")

[node name="EnemyUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -67.0
offset_top = -85.0
offset_right = 70.0
offset_bottom = 89.0

[node name="EnemyHealthBar" type="TextureProgressBar" parent="EnemyUI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -583.0
offset_top = -212.0
offset_right = 580.0
offset_bottom = -188.0
grow_horizontal = 2
grow_vertical = 0
value = 100.0
texture_under = ExtResource("5_3626h")
texture_over = ExtResource("6_red56")
texture_progress = ExtResource("7_rikwp")

[node name="EnemyHealthLabel" type="Label" parent="EnemyUI/EnemyHealthBar"]
layout_mode = 0
offset_left = 578.0
offset_top = 4.0
offset_right = 722.0
offset_bottom = 22.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "3000/3000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GoldAndXPBox" type="VBoxContainer" parent="EnemyUI"]
layout_mode = 0
offset_left = 149.0
offset_top = 6.0
offset_right = 236.0
offset_bottom = 46.0

[node name="EnemyGold" type="Label" parent="EnemyUI/GoldAndXPBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "2g"

[node name="EnemyXP" type="Label" parent="EnemyUI/GoldAndXPBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "2xp"

[node name="EnemySelectionHealth" type="Label" parent="EnemyUI"]
visible = false
layout_mode = 0
offset_left = 10.0
offset_top = -21.0
offset_right = 122.0
offset_bottom = -5.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "110/120"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnemyHealthBar2" type="TextureProgressBar" parent="EnemyUI/EnemySelectionHealth"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -72.0
offset_top = 3.0
offset_right = 1228.0
offset_bottom = 27.0
grow_horizontal = 2
scale = Vector2(0.112245, 0.46176)
value = 100.0
texture_under = SubResource("GradientTexture2D_osmp2")
texture_progress = ExtResource("7_rikwp")

[node name="StatContainer" type="VBoxContainer" parent="EnemyUI"]
layout_mode = 0
offset_left = 156.0
offset_top = 66.0
offset_right = 252.0
offset_bottom = 164.0

[node name="AttackLabel" type="Label" parent="EnemyUI/StatContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Atk: 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="EnemyUI/StatContainer/AttackLabel"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DefenseLabel" type="Label" parent="EnemyUI/StatContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Atk: 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="EnemyUI/StatContainer/DefenseLabel"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ArmorLabel" type="Label" parent="EnemyUI/StatContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Def: 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="EnemyUI/StatContainer/ArmorLabel"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BuffContainer" type="HBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -649.0
offset_top = -163.0
offset_right = -1.0
offset_bottom = -123.0
grow_horizontal = 2

[node name="DebuffContainer" type="HBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_top = -163.0
offset_right = 650.0
offset_bottom = -123.0
grow_horizontal = 2
size_flags_stretch_ratio = 0.0
alignment = 2
